fix: dark mode toggle has a label might want to change

--- a/front/src/styles/App.css
+++ b/front/src/styles/App.css
@@ -89,4 +89,5 @@ body.dark {
 .Dark-Toggle{
   display:flex;
   padding: 0.5%;
+  flex-direction: column;
 }
